--- a/style.css
+++ b/style.css
@@ -26,14 +26,14 @@ body{
   color: white;
   font-size: 20px;
   font-weight: 900;
-  margin-left: 150px;
-  padding: 20px;
+  padding-left: 200px;
+  padding-top: 20px;
 }
 
 .header-links {
   display: flex;
   gap: 15px;
-  margin-right: 100px;
+ padding-right: 300px;
 }
 
 a {
