--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ a {
 .box {
   height: 150px;
   width: 150px;
-  border: 3px solid blue;
+  border: 4px solid blue;
   border-radius: 20px;
 }
 
@@ -128,3 +128,32 @@ a {
   color: #333;
   text-align: center;
 }
+
+/* Feedback Section */
+
+.feedback-section{
+  width: 100vw;
+  height: 350px;
+  background-color: #E5E7EB;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px 150px;
+  overflow: auto;
+}
+
+.testimonial{
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+  width: 50vw;
+  height: 100px;
+
+}
+
+.customer-username{
+  text-align: end;
+  font-weight: 900;
+}
+
